create github pages

--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><section class="cid-qJCHnzxE9S" id="image2-v">
+<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="cid-qJCHnzxE9S" id="image2-v">
 
     
 
